--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -246,6 +246,8 @@ input.bigfield{
 }*/
 </style>
 
+<div class="container">
+
 <form action="" id="survey" name="survey" method="post" data-validate="parsley">
 <fieldset>
 
@@ -321,189 +323,188 @@ input.bigfield{
 
 	<div class="row">
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">Date of birth</td>
-                		<td><input type="text" class="form-control dobdatepicker checkdob" id="date_of_birth" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"><br>
-                		<div class="dobwarning" style="color:red;font-size:0.8em;margin-top:-10px;margin-bottom:10px;display:none;">format must be DD/MM/YYYY</div>
-                		</td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Date of birth</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input type="text" class="form-control dobdatepicker checkdob" id="date_of_birth" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"></p>
+            		<p class="dobwarning" style="color:red;font-size:0.8em;margin-bottom:10px;display:none;">format must be DD/MM/YYYY</p>
+	            </div>
+	        </div>
         </div>
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">UCAS number</td>
-                		<td><input class="form-control" type="text" name="ucas_number"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-                    
-	<div class="row">
-	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">School</td>
-                		<td><select name="school" data-required="true">
-                		    <option></option>
-                		    {% for opt in selections.schools %}
-                		        <option>{{ opt }}</option>
-                		    {% endfor %}
-                		</select></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">School house</td>
-                		<td><input type="text" name="school_house"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">UCAS number</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="ucas_number"></p>
+	            </div>
+	        </div>
         </div>
     </div>
                     
 	<div class="row">
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">Year group</td>
-                		<td><select name="year" data-required="true">
-                		    <option></option>
-                		    <option>Third year</option>
-                		    <option>Fourth year</option>
-                		    <option>Fifth year</option>
-                		    <option>Sixth year</option>
-                		    <option>Other</option>
-                		</select></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">School</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><select class="form-control" name="school" data-required="true">
+            		    <option></option>
+            		    {% for opt in selections.schools %}
+            		        <option>{{ opt }}</option>
+            		    {% endfor %}
+            		</select></p>
+	            </div>
+	        </div>
         </div>
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Gender</td>
-                		<td>
-                		    <select id="gender" name="gender" data-required="true">
-                		    <option></option>
-                		    <option value="Male">Man / Male (including trans man)</option>
-                		    <option value="Female">Woman / Female (including trans woman)</option>
-                		    <option value="Other">In another way</option>
-                		    <option value="Do not wish to disclose">Prefer not to say</option>
-                		    </select>
-                		    <p id="gender_other" style="display:none">
-                		        If you want to tell us how you identify your gender, please enter it here, 
-                		        or leave blank and we will simply record it as "Other": <br>
-                    		    <input type="text" name="gender_other">
-                    		</p>
-                		</td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">School house</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="school_house"></p>
+	            </div>
+	        </div>
+        </div>
+    </div>
+                    
+	<div class="row">
+	    <div class="col-md-6">
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Year group</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><select class="form-control" name="year" data-required="true">
+            		    <option></option>
+            		    <option>Third year</option>
+            		    <option>Fourth year</option>
+            		    <option>Fifth year</option>
+            		    <option>Sixth year</option>
+            		    <option>Other</option>
+            		</select></p>
+	            </div>
+	        </div>
+        </div>
+	    <div class="col-md-6">
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Gender</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p>
+            		    <select class="form-control" id="gender" name="gender" data-required="true">
+            		    <option></option>
+            		    <option value="Male">Man / Male (including trans man)</option>
+            		    <option value="Female">Woman / Female (including trans woman)</option>
+            		    <option value="Other">In another way</option>
+            		    <option value="Do not wish to disclose">Prefer not to say</option>
+            		    </select>
+            		    <p id="gender_other" style="display:none">
+            		        If you want to tell us how you identify your gender, please enter it here, 
+            		        or leave blank and we will simply record it as "Other": <br>
+                		    <input type="text" name="gender_other">
+                		</p>
+            		</p>
+	            </div>
+	        </div>
+        </div>
+    </div>
+
+	<div class="row">
+	    <div class="col-md-6">
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Home phone</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="home_phone"></p>
+	            </div>
+	        </div>
+        </div>
+	    <div class="col-md-6">		
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Mobile phone</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="mobile_phone"></p>
+	            </div>
+	        </div>
         </div>
     </div>
 
 	<div class="row">
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">Home phone</td>
-                		<td><input type="text" name="home_phone"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Address</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="address_line_1" data-required="true"></p>
+	            </div>
+	        </div>
         </div>
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">Mobile phone</td>
-                		<td><input type="text" name="mobile_phone"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-	<div class="row">
-	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Address</td>
-                		<td><input type="text" name="address_line_1" data-required="true"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">...</td>
-                		<td><input type="text" name="address_line_2"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">...</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="address_line_2"></p>
+	            </div>
+	        </div>
         </div>
     </div>
 
 	<div class="row">
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">City</td>
-                		<td><input type="text" name="city" data-required="true"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">City</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="city" data-required="true"></p>
+	            </div>
+	        </div>
         </div>
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Region</td>
-                		<td colspan="3"><input type="text" name="region"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Region</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="region"></p>
+	            </div>
+	        </div>
         </div>
     </div>
 
 	<div class="row">
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Post code</td>
-                		<td><input type="text" name="post_code" data-required="true"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Post code</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="post_code" data-required="true"></p>
+	            </div>
+	        </div>
         </div>
 	    <div class="col-md-6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">Email address</td>
-                		<td><input type="text" name="email" data-type="email" data-required="true" data-trigger="keyup focusout"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="col-md-6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Email address</p>
+	            </div>
+	            <div class="col-md-6">
+            		<p><input class="form-control" type="text" name="email" data-type="email" data-required="true" data-trigger="keyup focusout"></p>
+	            </div>
+	        </div>
         </div>
     </div>
 
@@ -897,6 +898,8 @@ input.bigfield{
 
 </fieldset>
 </form>
+
+</div>
 
 {% endblock %}
 
